{
    "name": "InputActions",
    "maps": [
        {
            "name": "Menu",
            "id": "0125227f-7c02-4a40-a373-3400e801dacb",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "03b1983f-1e47-44fa-93e0-0fe26e5491e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ada218c8-ea5c-4b7e-a078-2d7d7d403546",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InGame",
            "id": "91e1b3c8-5877-4769-b45c-2997e17fef31",
            "actions": [
                {
                    "name": "mouse.move",
                    "type": "Value",
                    "id": "d71bd7ba-e137-4b0b-b98c-8f0ee10a95df",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "mouse.click",
                    "type": "Button",
                    "id": "c3052a12-59eb-4605-bb05-99e3dd6321ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "player.move",
                    "type": "Button",
                    "id": "86758d70-ff10-474d-a8ed-c1377ada24dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "player.jump",
                    "type": "Button",
                    "id": "aaaa07d0-1f4d-4db4-a2a5-84d1a0af6fad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "player.crouch",
                    "type": "Button",
                    "id": "f7867d94-406c-44f1-9465-4b26244573a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "player.changeCamera",
                    "type": "Value",
                    "id": "d0df4bd1-2f1b-4363-9a40-fceabba3fa53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "inventory",
                    "type": "Button",
                    "id": "3ff41c22-a16e-4215-ad83-ecdd502d06c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e07d64b5-bb23-4f52-8112-c6c420e4db15",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouse.move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "511c7281-4fab-4eba-95c0-ac16a99b6d12",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouse.click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbe321fe-8fec-46ca-86f1-e34e7bc18d3e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouse.click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c08d7c93-3800-4113-a05d-17369efdc809",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouse.click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e756196-2f57-49f4-9955-baa17295b211",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "player.crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "c79498a0-7e0e-4500-8b8a-e84ca1d2fb60",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "player.move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "60e421d0-8d43-4a41-bd63-7725dba05ab0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "player.move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4b276518-88c0-4c17-89a7-8a9e4e43b0b3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "player.move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "82e639cf-63a0-48f0-a4ac-d4ff8ee9cec6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "player.move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c265dde2-3e7c-470e-b6cd-1eeb3c1bad33",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "player.move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4893e64c-2f95-4f7d-bc26-690899e60675",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "player.jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ae0c0f2-10be-4f92-96c4-3cdb7cd17acc",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "player.changeCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfecf01d-9166-49dd-abc1-706449aaf6b9",
                    "path": "<Keyboard>/i",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}